gradle dependencies > 주석확인요망

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -30,6 +30,20 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-authorization-server'
+	// 카카오페이 결제용 HTTP 클라이언트
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+
+	// WebSocket (실시간 경매)
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+
+	// JWT 인증
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
+
+	// Redis (세션 관리)
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
