--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -31,7 +31,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-authorization-server'
 	// 카카오페이 결제용 HTTP 클라이언트
-	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	//implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'com.squareup.okhttp3:okhttp:4.12.0'
 
 	// WebSocket (실시간 경매)
