--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,9 +23,9 @@ jobs:
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      
+
       - name: Login to DockerHub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -35,11 +35,12 @@ jobs:
         with:
           context: ./${{ matrix.service }}
           push: true
+          no-cache: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/ddauction-${{ matrix.service }}:latest
             ${{ secrets.DOCKERHUB_USERNAME }}/ddauction-${{ matrix.service }}:${{ github.sha }}
-          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/ddauction-${{ matrix.service }}:latest
-          cache-to: type=inline
+#          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/ddauction-${{ matrix.service }}:latest
+#          cache-to: type=inline
 
   deploy:
     needs: build-and-push
