--- a/infra/docker-compose.local.yml
+++ b/infra/docker-compose.local.yml
@@ -4,10 +4,10 @@ services:
     image: mysql:8.0
     container_name: db
     env_file:
-      - .env.local.db
+      - .env.local
     environment:
-      # MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD}
-      MYSQL_DATABASE: ddauction_db
+      MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
     ports:
       - "3307:3306"   # 호스트 3307 → 컨테이너 3306
     volumes:
@@ -26,12 +26,12 @@ services:
     build: ../backend
     container_name: backend
     env_file:
-      - .env.local.back
+      - .env.local
     environment:
       SPRING_PROFILES_ACTIVE: local
       # 컨테이너 간 접속 → DB 호스트는 localhost가 아니라 'db'
-      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/ddauction_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=utf8
-      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/${MYSQL_DATABASE}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=utf8
+      SPRING_DATASOURCE_USERNAME: ${MYSQL_USER}
     ports:
       - "8080:8080"
     depends_on:
