--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,7 +5,7 @@ COPY . .
 # Gradle은 보통 빌드 속도를 높이려고 백그라운드 데몬 프로세스를 띄움.
 # 데몬 안띄우게 하는 것임. -> 속도 빨라짐
 RUN chmod +x ./gradlew
-RUN ./gradlew clean bootJar --no-daemon
+RUN ./gradlew clean bootJar -x test --no-daemon
 
 # ===== Run stage =====
 FROM amazoncorretto:17.0.12
