--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@eslint/js": "^9.36.0",
     "@types/node": "^24.7.2",
     "@types/react": "^19.1.16",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
     "eslint": "^9.36.0",
