시크릿 프로퍼티스 파일 삭제, env/yml/docker-compose 파일 수정

--- a/infra/.env.local
+++ b/infra/.env.local
@@ -1,13 +1,13 @@
 SPRING_PROFILES_ACTIVE=local
 
-ALLOWED_ORIGINS=http://localhost:3000
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost,http://localhost:5173
 
 MYSQL_ROOT_PASSWORD=1111
 MYSQL_DATABASE=ddauction_db
 MYSQL_USER=root
 MYSQL_PASSWORD=1111
 
-DB_URL=jdbc:mysql://localhost:3306/ddauction
+DB_URL=jdbc:mysql://db:3306/${MYSQL_DATABASE}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 DB_USERNAME=root
 DB_PASSWORD=1111
 
