--- a/infra/docker-compose.local.yml
+++ b/infra/docker-compose.local.yml
@@ -9,31 +9,41 @@ services:
       MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD}
       MYSQL_DATABASE: ${MYSQL_DATABASE}
     ports:
-      - "3307:3306"   # 호스트 3307 → 컨테이너 3306
+      - "3307:3306"
     volumes:
       - dbdata:/var/lib/mysql
     healthcheck:
-      # MySQL 클라이언트 유틸리티인 mysqladmin 을 이용해서 
-      # DB가 살아있는지 확인.
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       interval: 5s
-      # test 명령을 실행했을 때 5초 안에 응답이 없으면 실패로 간주
       timeout: 5s
       retries: 10
 
   backend:
-    # ../backend 경로에 있는 Dockerfile로 이미지 빌드
     build: ../backend
     container_name: backend
     env_file:
       - .env.local
     environment:
       SPRING_PROFILES_ACTIVE: local
-      # 컨테이너 간 접속 → DB 호스트는 localhost가 아니라 'db'
-      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/${MYSQL_DATABASE}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=utf8
-      SPRING_DATASOURCE_USERNAME: ${MYSQL_USER}
+      # 컨테이너 간 통신을 위한 DB URL
+      DB_URL: jdbc:mysql://db:3306/${MYSQL_DATABASE}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+      DB_USERNAME: ${MYSQL_USER}
+      DB_PASSWORD: ${MYSQL_PASSWORD}
+      # JWT
+      JWT_SECRET: ${JWT_SECRET}
+      # CORS
+      ALLOWED_ORIGINS: ${ALLOWED_ORIGINS}
+      # 결제
+      PAYMENT_PORTONE_IMP_CODE: ${PAYMENT_PORTONE_IMP_CODE}
+      PAYMENT_PORTONE_API_KEY: ${PAYMENT_PORTONE_API_KEY}
+      PAYMENT_PORTONE_API_SECRET: ${PAYMENT_PORTONE_API_SECRET}
+      PAYMENT_PORTONE_CALLBACK_URL: ${PAYMENT_PORTONE_CALLBACK_URL}
+      # 파일 업로드
+      FILE_UPLOAD_DIRECTORY: ${FILE_UPLOAD_DIRECTORY}
     ports:
       - "8080:8080"
+    volumes:
+      - upload-data:/uploads
     depends_on:
       db:
         condition: service_healthy
@@ -41,12 +51,11 @@ services:
   frontend:
     build: ../frontend
     container_name: frontend
-    environment: {}
     ports:
-    # 로컬 PC에서는 http://localhost:3000, 내부 컨테이너는 80번 포트
-      - "80:80"  # Nginx로 서빙(개발 시 Vite dev 서버를 쓰고 싶으면 로컬 npm run dev 권장)
+      - "80:80"
     depends_on:
       - backend
 
 volumes:
   dbdata:
+  upload-data:
