--- a/infra/.env.prod
+++ b/infra/.env.prod
@@ -1,8 +1,10 @@
+SPRING_PROFILES_ACTIVE=prod
+
+ALLOWED_ORIGINS=http://15.165.25.115
+
 RDS_ENDPOINT=ddauction-db.cdycgq4uyj1v.ap-northeast-2.rds.amazonaws.com
 SPRING_DATASOURCE_USERNAME=admin
 SPRING_DATASOURCE_PASSWORD=dda1234!!
-
-ALLOWED_ORIGINS=http://15.165.25.115
 
 DOCKERHUB_USERNAME=uizzuu
 BACKEND_IMAGE=uizzuu/ddauction-backend:latest
