--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react": "^19.1.1",
     "react-datepicker": "^8.8.0",
     "react-dom": "^19.1.1",
+    "react-feather": "^2.0.10",
     "react-router-dom": "^7.9.4",
     "recharts": "^3.3.0"
   },
