상세페이지 입찰 오류 해결, CSS 에러 수정

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -60,10 +60,6 @@ payment:
     api-secret: ${PAYMENT_PORTONE_API_SECRET}
     callback-url: ${PAYMENT_PORTONE_CALLBACK_URL}
 
-file:
-  upload:
-    directory: ${FILE_UPLOAD_DIRECTORY:/uploads}
-
 # ===================================
 # 로컬 환경
 # ===================================
@@ -90,6 +86,10 @@ spring:
   jackson:
     time-zone: Asia/Seoul
 
+file:
+  upload:
+    directory: ./uploads
+
 # ===================================
 # 프로덕션 환경
 # ===================================
@@ -114,6 +114,10 @@ spring:
           time_zone: Asia/Seoul
   jackson:
     time-zone: Asia/Seoul
+
+file:
+  upload:
+    directory: ${FILE_UPLOAD_DIRECTORY:/uploads}
 
 #spring:
 #  profiles:
