도메인 연결

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,6 +53,16 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
+            cd ~/ddauction-project
+
+            echo "=== Git Pull ==="
+            git pull origin main
+
+            echo "=== Nginx 설정 업데이트 ==="
+            sudo cp ~/ddauction-project/infra/nginx/ddauction.conf /etc/nginx/sites-available/ddauction
+            sudo ln -sf /etc/nginx/sites-available/ddauction /etc/nginx/sites-enabled/ddauction
+            sudo nginx -t && sudo systemctl reload nginx
+
             cd ~/ddauction-project/infra
 
             echo "=== Docker 로그인 ==="
@@ -66,7 +76,7 @@ jobs:
             SPRING_DATASOURCE_PASSWORD=${{ secrets.DB_PASSWORD }}
             
              # 🛑 수정된 부분: CORS 허용 도메인 추가 🛑
-            ALLOWED_ORIGINS=http://localhost:3000,http://${{ secrets.EC2_HOST }},http://${{ secrets.EC2_HOST }}:8080
+            ALLOWED_ORIGINS=https://ddauction.shop,https://www.ddauction.shop
 
             DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}
             BACKEND_IMAGE=${{ secrets.DOCKERHUB_USERNAME }}/ddauction-backend:latest
