--- a/infra/.env.prod
+++ b/infra/.env.prod
@@ -1,6 +1,6 @@
 SPRING_PROFILES_ACTIVE=prod
 
-ALLOWED_ORIGINS=http://15.165.25.115
+ALLOWED_ORIGINS=https://ddauction.shop,https://www.ddauction.shop
 
 RDS_ENDPOINT=ddauction-db.cdycgq4uyj1v.ap-northeast-2.rds.amazonaws.com
 SPRING_DATASOURCE_USERNAME=admin
