--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -76,7 +76,7 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.MySQLDialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         show_sql: true
