타입 오류 해결 및 이미지 테이블 추가로 인한 파일 수정

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -64,6 +64,10 @@ payment:
 # 로컬 환경
 # ===================================
 ---
+server:
+  ssl:
+    enabled: false
+
 spring:
   config:
     activate:
