--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -15,7 +15,7 @@ server {
 
     # API 프록시 (선택사항)
     location /api {
-        proxy_pass http://backend:8080;
+        proxy_pass http://localhost:8080;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -24,6 +24,20 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        # CORS 허용 헤더
+        add_header Access-Control-Allow-Origin $http_origin always;
+        add_header Access-Control-Allow-Credentials true always;
+        add_header Access-Control-Allow-Methods 'GET, POST, PUT, DELETE, OPTIONS' always;
+        add_header Access-Control-Allow-Headers 'Origin, Content-Type, Accept, Authorization' always;
+
+        # OPTIONS 사전 요청 처리
+        if ($request_method = OPTIONS) {
+            add_header Access-Control-Max-Age 1728000;
+            add_header Content-Length 0;
+            add_header Content-Type text/plain;
+            return 204;
+        }
     }
 
     # 정적 파일 캐싱
