--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -49,6 +49,7 @@ jwt:
 
 server:
   port: 8080
+  forward-headers-strategy: FRAMEWORK
 
 app:
   allowed-origins: ${ALLOWED_ORIGINS:http://localhost:3000,http://localhost,http://localhost:5173}
