--- a/infra/nginx/ddauction.conf
+++ b/infra/nginx/ddauction.conf
@@ -25,9 +25,13 @@ server {
 
     # React SPA 서빙 (Frontend)
     location / {
-        root /usr/share/nginx/html;
-        index index.html;
-        try_files $uri /index.html;
+        proxy_pass http://localhost:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
     }
 
     # Backend API proxy
