--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name ddauction.shop;
     root /usr/share/nginx/html;
     index index.html;
 
@@ -15,6 +15,16 @@ server {
 
     # API 프록시 (선택사항)
     location /api {
+    # OPTIONS 요청 처리 (사전요청 통과)
+    if ($request_method = OPTIONS) {
+        add_header 'Access-Control-Allow-Origin' 'https://ddauction.shop' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' '*' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        add_header 'Access-Control-Max-Age' 1728000;
+        return 204;
+    }
+
     proxy_pass http://localhost:8080;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
@@ -25,10 +35,9 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
 
-    # CORS 헤더는 Spring에서 처리하도록 최소화
-    proxy_set_header Origin $http_origin;
-
-    # OPTIONS도 Spring으로 전달 (if 제거)
+    # 실제 요청 응답에도 CORS 허용 헤더 추가
+    add_header 'Access-Control-Allow-Origin' 'https://ddauction.shop' always;
+    add_header 'Access-Control-Allow-Credentials' 'true' always;
 }
 
     # 정적 파일 캐싱
