--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,59 +1,20 @@
-# ----------------------------
-# HTTP → HTTPS 리디렉션
-# ----------------------------
 server {
     listen 80;
-    server_name ddauction.shop www.ddauction.shop;
-
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
-
-# ----------------------------
-# HTTPS 서버
-# ----------------------------
-server {
-    listen 443 ssl http2;
-    server_name ddauction.shop www.ddauction.shop;
-
+    server_name localhost;
     root /usr/share/nginx/html;
     index index.html;
 
-    # SSL 인증서 경로 (Let's Encrypt 예시)
-    ssl_certificate /etc/letsencrypt/live/ddauction.shop/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/ddauction.shop/privkey.pem;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-
-    # Gzip 압축
+    # Gzip 압축 설정
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
-    # ----------------------------
-    # 전역 CORS 헤더 (배포용)
-    # ----------------------------
-    add_header 'Access-Control-Allow-Origin' 'https://ddauction.shop' always;
-    add_header 'Access-Control-Allow-Credentials' 'true' always;
-    add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
-    add_header 'Access-Control-Allow-Headers' '*' always;
-
-    # ----------------------------
-    # SPA fallback
-    # ----------------------------
+    # React Router를 위한 설정 (SPA fallback)
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    # ----------------------------
-    # API 프록시
-    # ----------------------------
+    # API 프록시 (선택사항)
     location /api {
-        # OPTIONS (preflight) 요청은 바로 응답
-        if ($request_method = OPTIONS) {
-            return 204;
-        }
-
         proxy_pass http://localhost:8080;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -63,21 +24,25 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        # CORS 허용 헤더
+        add_header Access-Control-Allow-Origin $http_origin always;
+        add_header Access-Control-Allow-Credentials true always;
+        add_header Access-Control-Allow-Methods 'GET, POST, PUT, DELETE, OPTIONS' always;
+        add_header Access-Control-Allow-Headers 'Origin, Content-Type, Accept, Authorization' always;
+
+        # OPTIONS 사전 요청 처리
+        if ($request_method = OPTIONS) {
+            add_header Access-Control-Max-Age 1728000;
+            add_header Content-Length 0;
+            add_header Content-Type text/plain;
+            return 204;
+        }
     }
 
-    # ----------------------------
     # 정적 파일 캐싱
-    # ----------------------------
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
-
-    # ----------------------------
-    # 보안 헤더
-    # ----------------------------
-    add_header X-Frame-Options DENY;
-    add_header X-Content-Type-Options nosniff;
-    add_header X-XSS-Protection "1; mode=block";
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 }
