--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -9,13 +9,13 @@ spring:
           google:
             client-id: ${CLIENT_ID}
             client-secret: ${CLIENT_SECRET}
-            redirect-uri: "http://localhost:8080/login/oauth2/code/google"
+            redirect-uri: "https://ddauction.shop/login/oauth2/code/google"
             scope: profile, email
 
           naver:
             client-id: ${CLIENT_ID}
             client-secret: ${CLIENT_SECRET}
-            redirect-uri: "http://localhost:8080/login/oauth2/code/naver"
+            redirect-uri: "https://ddauction.shop/login/oauth2/code/naver"
             authorization-grant-type: authorization_code
             client-name: Naver
             scope: name, email
@@ -23,7 +23,7 @@ spring:
           kakao:
             client-id: ${CLIENT_ID}
             client-secret: ${CLIENT_SECRET}
-            redirect-uri: "http://localhost:8080/login/oauth2/code/kakao"
+            redirect-uri: "https://ddauction.shop/login/oauth2/code/kakao"
             client-name: Kakao
             authorization-grant-type: authorization_code
             client-authentication-method: client_secret_post
@@ -49,10 +49,9 @@ jwt:
 
 server:
   port: 8080
-  forward-headers-strategy: NATIVE
 
 app:
-  allowed-origins: https://ddauction.shop,http://15.165.25.115
+  allowed-origins: https://ddauction.shop,http://15.165.25.115,http://localhost:3000
 
 payment:
   portone:
