--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 # ===================================
-# 공통 설정 redirect-uri 배포용으로 바꾸면 됩니다
+# 공통 설정
 # ===================================
 spring:
   security:
@@ -7,23 +7,20 @@ spring:
       client:
         registration:
           google:
-            client-id: ${CLIENT_ID}
-            client-secret: ${CLIENT_SECRET}
-            redirect-uri: "http://localhost:8080/login/oauth2/code/google"
+            client-id: ${GOOGLE_CLIENT_ID}
+            client-secret: ${GOOGLE_CLIENT_SECRET}
             scope: profile, email
 
           naver:
-            client-id: ${CLIENT_ID}
-            client-secret: ${CLIENT_SECRET}
-            redirect-uri: "http://localhost:8080/login/oauth2/code/naver"
+            client-id: ${NAVER_CLIENT_ID}
+            client-secret: ${NAVER_CLIENT_SECRET}
             authorization-grant-type: authorization_code
             client-name: Naver
             scope: name, email
 
           kakao:
-            client-id: ${CLIENT_ID}
-            client-secret: ${CLIENT_SECRET}
-            redirect-uri: "http://localhost:8080/login/oauth2/code/kakao"
+            client-id: ${KAKAO_CLIENT_ID}
+            client-secret: ${KAKAO_CLIENT_SECRET}
             client-name: Kakao
             authorization-grant-type: authorization_code
             client-authentication-method: client_secret_post
@@ -61,18 +58,20 @@ payment:
     api-secret: ${PAYMENT_PORTONE_API_SECRET}
     callback-url: ${PAYMENT_PORTONE_CALLBACK_URL}
 
+file:
+  upload:
+    directory: ./uploads
+
 # ===================================
 # 로컬 환경
 # ===================================
 ---
-server:
-  ssl:
-    enabled: false
-
 spring:
   config:
     activate:
       on-profile: local
+  ssl:
+    enabled: false
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: ${DB_URL:jdbc:mysql://localhost:3306/ddauction_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true}
@@ -90,6 +89,19 @@ spring:
           time_zone: Asia/Seoul
   jackson:
     time-zone: Asia/Seoul
+
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            redirect-uri: "http://localhost:8080/login/oauth2/code/google"
+
+          naver:
+            redirect-uri: "http://localhost:8080/login/oauth2/code/naver"
+
+          kakao:
+            redirect-uri: "http://localhost:8080/login/oauth2/code/kakao"
 
 file:
   upload:
@@ -119,6 +131,19 @@ spring:
           time_zone: Asia/Seoul
   jackson:
     time-zone: Asia/Seoul
+
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            redirect-uri: "https://ddauction.shop/login/oauth2/code/google"
+
+          naver:
+            redirect-uri: "https://ddauction.shop/login/oauth2/code/naver"
+
+          kakao:
+            redirect-uri: "https://ddauction.shop/login/oauth2/code/kakao"
 
 file:
   upload:
