s3스프링세팅함

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -73,6 +73,9 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.566'
+
 }
 
 tasks.named('test') {
