상품디테일페이지 이미지슬라이드

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,9 @@
     "react-dom": "^19.1.1",
     "react-feather": "^2.0.10",
     "react-router-dom": "^7.9.4",
-    "recharts": "^3.3.0"
+    "react-slick": "^0.31.0",
+    "recharts": "^3.3.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -27,6 +29,7 @@
     "@types/react": "^19.1.16",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^19.1.9",
+    "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react": "^5.0.4",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
