소셜로그인 리다이렉트 오류 #1

--- a/infra/nginx/ddauction.conf
+++ b/infra/nginx/ddauction.conf
@@ -23,7 +23,7 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-    # ✅ Backend API proxy (가장 먼저 매칭)
+    # Backend API proxy (가장 먼저 매칭)
     location /api {
         proxy_pass http://localhost:8080;
         proxy_http_version 1.1;
@@ -36,9 +36,9 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # ✅ OAuth 콜백 (Backend에서 처리)
+    # OAuth 콜백 (Backend에서 처리)
     location /login/oauth2/code {
-        proxy_pass http://localhost:8080;
+        proxy_pass https://ddauction.shop;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
