--- a/infra/nginx/ddauction.conf
+++ b/infra/nginx/ddauction.conf
@@ -47,6 +47,16 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # 소셜로그인 proxy
+    location /oauth2/authorization {
+        proxy_pass http://localhost:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     # WebSocket proxy
     location /ws/ {
         proxy_pass http://localhost:8080/ws/;
