--- a/infra/nginx/ddauction.conf
+++ b/infra/nginx/ddauction.conf
@@ -46,6 +46,16 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # OAuth 콜백
+    location /login/oauth2/code {
+        proxy_pass https://ddauction.shop;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     # WebSocket proxy
     location /ws/ {
         proxy_pass http://localhost:8080/ws/;
