s3 이미지 업로드 해결

--- a/infra/nginx/ddauction.conf
+++ b/infra/nginx/ddauction.conf
@@ -23,6 +23,9 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
+    # Nginx 헤더 크기 제한
+    large_client_header_buffers 4 32k;
+
     # Backend API proxy
     location /api {
         proxy_pass http://localhost:8080;
