--- a/infra/nginx/ddauction.conf
+++ b/infra/nginx/ddauction.conf
@@ -37,6 +37,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Authorization $http_authorization;
     }
 
     # 소셜로그인 proxy
