--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -138,7 +138,7 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.MySQLDialect
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     properties:
       hibernate:
         show_sql: false
