--- a/infra/nginx/ddauction.conf
+++ b/infra/nginx/ddauction.conf
@@ -52,7 +52,7 @@ server {
 
     # OAuth 콜백
     location /login/oauth2/code {
-        proxy_pass https://ddauction.shop;
+        proxy_pass http://localhost:8080;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
