85-87추가함 문제생기면 주석살리기

--- a/infra/nginx/ddauction.conf
+++ b/infra/nginx/ddauction.conf
@@ -75,12 +75,15 @@ server {
 
     # React SPA 서빙 (Frontend)
     location / {
-        proxy_pass http://localhost:3000;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
+        # proxy_pass http://localhost:3000;
+        # proxy_http_version 1.1;
+        # proxy_set_header Host $host;
+        # proxy_set_header X-Real-IP $remote_addr;
+        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # proxy_set_header X-Forwarded-Proto $scheme;
+        # proxy_cache_bypass $http_upgrade;
+        root /home/ubuntu/ddauction-project/frontend/dist;
+        index index.html;
+        try_files $uri /index.html;
     }
 }
