--- a/infra/nginx/ddauction.conf
+++ b/infra/nginx/ddauction.conf
@@ -82,5 +82,6 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
+        error_page 404 = /index.html;
     }
 }
