qr스캐너 만드는중

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -76,6 +76,10 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
     implementation 'com.amazonaws:aws-java-sdk-s3:1.12.566'
 
+    // 이미지 스캔
+    implementation 'com.google.zxing:core:3.5.1'
+    implementation 'com.google.zxing:javase:3.5.1'
+
 }
 
 tasks.named('test') {
