--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@zxing/browser": "^0.1.5",
     "build": "^0.1.4",
     "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
