--- a/infra/nginx/ddauction.conf
+++ b/infra/nginx/ddauction.conf
@@ -41,23 +41,21 @@ server {
     }
 
     # 소셜로그인 proxy
-    location /oauth2/authorization {
-        proxy_pass http://localhost:8080;
-        proxy_http_version 1.1;
+    location /oauth2/ {
+        proxy_pass http://localhost:8080/oauth2/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Proto https;
     }
 
     # OAuth 콜백
-    location /login/oauth2/code {
-        proxy_pass http://localhost:8080;
-        proxy_http_version 1.1;
+    location /login/oauth2/code/ {
+        proxy_pass http://localhost:8080/login/oauth2/code/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Proto https;
     }
 
     # WebSocket proxy
