[소연] 소셜로그인 nginx 수정 #2 (ddauction.conf)

--- a/infra/nginx/ddauction.conf
+++ b/infra/nginx/ddauction.conf
@@ -42,7 +42,7 @@ server {
 
     # 소셜로그인 proxy
     location /oauth2/ {
-        proxy_pass http://localhost:8080/oauth2/;
+        proxy_pass http://localhost:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -51,7 +51,7 @@ server {
 
     # OAuth 콜백
     location /login/oauth2/code/ {
-        proxy_pass http://localhost:8080/login/oauth2/code/;
+        proxy_pass http://localhost:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
