[소연] 소셜로그인 https/리버스 프록시 문제 #1 (application.yml)

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -128,6 +128,8 @@ spring:
   config:
     activate:
       on-profile: prod
+  server:
+    forward-headers-strategy: framework
   ssl:
     enabled: false
   datasource:
