--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# ddauction-project > .github / .idea / backend / frontend / chatbot / infra
+
 ##############################
 # Backend (Spring Boot + Gradle)
 ##############################
@@ -12,7 +14,7 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 
 # Gradle 캐시 / 빌드 산출물
-backend/caches/
+caches/
 **/caches/
 **/gradle-8.14.3-bin/
 **/gradle-8.14-bin/
@@ -27,8 +29,9 @@ backend/caches/
 *.jnilib
 bin/
 
-# uploads/ 로컬 업로드 파일
-/uploads
+node_modules/
+dist/
+build/
 
 # generated
 generated/
@@ -49,16 +52,13 @@ target/
 ##############################
 # Frontend (React / Vite / Node)
 ##############################
-node_modules/
-dist/
-build/
-*.env
-.env.*
-.vite/
-*.tsbuildinfo
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+frontend/*.env
+frontend/.env.*
+frontend/.vite/
+frontend/*.tsbuildinfo
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
 
 ##############################
 # IDE / Editor
@@ -83,9 +83,9 @@ nbdist/
 ##############################
 # Docker / Infra
 ##############################
-docker-compose.override.yml
-*.env.local
-*.env.*.local
+infra/docker-compose.local.yml
+infra/*.env.local
+infra/*.env.*.local
 
 ##############################
 # OS / Misc
