--- a/.gitignore
+++ b/.gitignore
@@ -94,7 +94,10 @@ infra/*.env.*.prod
 ##############################
 # chatbot
 ##############################
+*.env
+.env
 chatbot/.env
+
 
 ##############################
 # OS / Misc
