api.py배포용코드 추가함,corsconfig 헤더*로변경함 도커컴포즈prodallow-origin주소추가함

--- a/infra/docker-compose.prod.yml
+++ b/infra/docker-compose.prod.yml
@@ -11,6 +11,7 @@ services:
     environment:
       TZ: "Asia/Seoul"
       # RAG API 환경 변수
+      ALLOWED_ORIGINS: http://backend:8080
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       PINECONE_API_KEY: ${PINECONE_API_KEY}
       PINECONE_ENVIRONMENT: ${PINECONE_ENVIRONMENT}
@@ -22,7 +23,7 @@ services:
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:8000/status"]
       interval: 30s
       timeout: 10s
       retries: 3
