상품설명 자동화기능추가 및 카테고리 토큰null오류 해결 및  파이썬 도커파일추가 및 productregister 카테고리 옵션 추가함 물품등록시 카테고리 설정가능

--- a/infra/docker-compose.prod.yml
+++ b/infra/docker-compose.prod.yml
@@ -11,7 +11,7 @@ services:
     environment:
       TZ: "Asia/Seoul"
       # RAG API 환경 변수
-      ALLOWED_ORIGINS: http://backend:8080
+      ALLOWED_ORIGINS: http://localhost:3000,https://ddauction.shop/
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       PINECONE_API_KEY: ${PINECONE_API_KEY}
       PINECONE_ENVIRONMENT: ${PINECONE_ENVIRONMENT}
